# task-api

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 593ebd2b35e7_init.py
src/: .env  config.py  main.py
src/adapters/api/: dependencies.py  routes.py  schemas.py
src/application/tasks/: dto.py  services.py
src/domain/tasks/: interfaces.py  models.py
src/infra/: db.py
src/infra/persistence/: models.py  repositories.py
tests/: test_task_service.py
