[project]
name = "task-list"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "sqlalchemy>=2.0.41",
]

[tool.uv]
  native-tls = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["**"]
exclude = [".venv"]

[tool.hatch.build.targets.sdist]
include = ["**"]
exclude = [".venv"]
